samples/_failures_safe/1761552830_0d6e0a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d0a68175.c: In function ‘main’:
./samples/SAFE/__tmp_d0a68175.c:165:5: error: expected declaration or statement at end of input
  165 |     printf("\nMatrix Addition:\n");
      |     ^~~~~~
